adding the initial files for the portfolio project

--- a/index.html
+++ b/index.html
@@ -9,8 +9,21 @@
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
-    <h1>Hello World!</h1>
-    <h1>We are software Developers</h1>
+    <!-- <h1>Hello World!</h1>
+    <h1>We are software Developers</h1> -->
+
+    <header id="welcome-section" class="welcome">
+      <div class="picture-div">
+        <img src="#" alt="picture" class="picture">
+      </div>
+      <div class="header-text-div">
+        <h1 class="header-text">Lorem ih1sum dolor sit amet consectetur adipisicing elit. Dolorem quis sequi, sunt praesentium sint cum rem quae asperiores quod a quos vitae amet sed nihil adipisci, veniam rerum est dolorum.
+        </h1>
+      </div>
+    </header>
+    <section class="projects">
+      
+    </section>
 
     <!--
 
