worked on class projects, added new classes and styled them as well

--- a/index.html
+++ b/index.html
@@ -22,7 +22,18 @@
       </div>
     </header>
     <section class="projects">
-      
+      <div class="project">
+        <h2 class="project-title">Project One</h2>
+        <a href="" class="project-link">Click Here</a>
+        <div>
+      <div class="project">
+          <h2 class="project-title">Project Two</h2>
+          <a href="" class="project-link">Click Here</a>
+        <div>
+      <div class="project">
+          <h2 class="project-title">Project Three</h2>
+          <a href="" class="project-link">Click Here</a>
+        <div>      
     </section>
 
     <!--
