finishing up the project and the rest of the tasks

--- a/index.html
+++ b/index.html
@@ -13,28 +13,37 @@
     <h1>We are software Developers</h1> -->
 
     <header id="welcome-section" class="welcome">
-      <div class="picture-div">
-        <img src="#" alt="picture" class="picture">
+
+    <div class="navbar" id="navbar">
+        <a class="active" href="#welcome-section">Home</a>
+        <a href="#projects">Projects</a>
+        <a href="#footer-section">More</a>
       </div>
+
+
+
       <div class="header-text-div">
         <h1 class="header-text">Lorem ih1sum dolor sit amet consectetur adipisicing elit. Dolorem quis sequi, sunt praesentium sint cum rem quae asperiores quod a quos vitae amet sed nihil adipisci, veniam rerum est dolorum.
         </h1>
       </div>
     </header>
-    <section class="projects">
-      <div class="project">
+    <section class="projects" id="projects">
+      <div class="project" id="box1">
         <h2 class="project-title">Project One</h2>
-        <a href="" class="project-link">Click Here</a>
-        <div>
-      <div class="project">
+        <a href="https://redvanisation.github.io/Radouane-Tunde-Microverse/" class="project-link" target="_blank">Click Here</a>
+      </div>
+      <div class="project" id="box2">
           <h2 class="project-title">Project Two</h2>
-          <a href="" class="project-link">Click Here</a>
-        <div>
-      <div class="project">
+          <a href="https://github.com/" class="project-link" target="_blank">Click Here</a>
+      </div>
+      <div class="project" id="box3">
           <h2 class="project-title">Project Three</h2>
-          <a href="" class="project-link">Click Here</a>
-        <div>      
+          <a href="https://github.com/" class="project-link" target="_blank">Click Here</a>
+      </div>      
     </section>
+    <footer class="footer" id="footer-section">
+      <p class="footer-text">Made by <a href="https://github.com/Redvanisation" id="profile-link" target="_blank">Redouane</a> and <a href="https://github.com/tundeiness" id="profile-link" target="_blank">Tunde</a> for Microverse Collaborative Work Project</p>
+    </footer>
 
     <!--
 
